Refactoring.
Cleanup code.